recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:12: error: '(' expected but identifier found.
    if i==0{
       ^